// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporter Dashboard Reporter with certification requests 1`] = `
<Relay(DefaultLayout)
  allowedGroups={
    Array [
      "User",
    ]
  }
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "ciipUserBySub": Object {
        "certificationRequests": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "1",
              },
            },
          ],
        },
        "id": "ciip-reporter@mailinator.com",
        "rowId": 6,
      },
    }
  }
  showSubheader={true}
  title="My Operators"
>
  <Row
    noGutters={false}
  >
    <Col
      md={
        Object {
          "span": 8,
        }
      }
    >
      <Relay(OrganisationsComponent)
        confirmOrg={false}
        flagCertRequests={true}
        handleContextChange={[Function]}
        handleInputChange={[Function]}
        handleOrgChange={[Function]}
        handleOrgConfirm={[Function]}
        orgInput=""
        query={
          Object {
            " $fragmentRefs": Object {
              "Organisations_query": true,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "ciipUserBySub": Object {
                "certificationRequests": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "id": "1",
                      },
                    },
                  ],
                },
                "id": "ciip-reporter@mailinator.com",
                "rowId": 6,
              },
            },
          }
        }
        selectedOrg={null}
      />
    </Col>
    <Col
      md={4}
    >
      <h5
        style={
          Object {
            "marginBottom": "20px",
          }
        }
      >
        How to apply for CIIP
      </h5>
      <div
        className="how-to-apply"
      >
        <ListGroup
          horizontal={null}
          variant={null}
        >
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 1:
            </strong>
            <br />
            Request access to apply on behalf of an Operation as an applicant.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 2:
            </strong>
            <br />
            CIIP administrators will review and approve your request.
             
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 3:
            </strong>
            <br />
            Applicants will fill out an application for the Operation and send it to a Certifying Official.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 4:
            </strong>
            <br />
            The Certifying Official reviews and signs off on the application.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 5:
            </strong>
            <br />
            The applicant submits the application for assessment by the Ministry.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 6:
            </strong>
            <br />
            CIIP administrators review the application.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 7:
            </strong>
            <br />
            If any changes are required, the applicant will be requested to revise the application.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 8:
            </strong>
            <br />
            Once processed, the applicant will receive a grant letter with further details on the expected incentive payment.
          </ListGroupItem>
        </ListGroup>
      </div>
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`Reporter Dashboard Reporter with no certification requests 1`] = `
<Relay(DefaultLayout)
  allowedGroups={
    Array [
      "User",
    ]
  }
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "ciipUserBySub": Object {
        "certificationRequests": Object {
          "edges": Array [],
        },
        "id": "ciip-reporter@mailinator.com",
        "rowId": 6,
      },
    }
  }
  showSubheader={true}
  title="My Operators"
>
  <Row
    noGutters={false}
  >
    <Col
      md={
        Object {
          "span": 8,
        }
      }
    >
      <Relay(OrganisationsComponent)
        confirmOrg={false}
        flagCertRequests={false}
        handleContextChange={[Function]}
        handleInputChange={[Function]}
        handleOrgChange={[Function]}
        handleOrgConfirm={[Function]}
        orgInput=""
        query={
          Object {
            " $fragmentRefs": Object {
              "Organisations_query": true,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "ciipUserBySub": Object {
                "certificationRequests": Object {
                  "edges": Array [],
                },
                "id": "ciip-reporter@mailinator.com",
                "rowId": 6,
              },
            },
          }
        }
        selectedOrg={null}
      />
    </Col>
    <Col
      md={4}
    >
      <h5
        style={
          Object {
            "marginBottom": "20px",
          }
        }
      >
        How to apply for CIIP
      </h5>
      <div
        className="how-to-apply"
      >
        <ListGroup
          horizontal={null}
          variant={null}
        >
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 1:
            </strong>
            <br />
            Request access to apply on behalf of an Operation as an applicant.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 2:
            </strong>
            <br />
            CIIP administrators will review and approve your request.
             
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 3:
            </strong>
            <br />
            Applicants will fill out an application for the Operation and send it to a Certifying Official.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 4:
            </strong>
            <br />
            The Certifying Official reviews and signs off on the application.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 5:
            </strong>
            <br />
            The applicant submits the application for assessment by the Ministry.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 6:
            </strong>
            <br />
            CIIP administrators review the application.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 7:
            </strong>
            <br />
            If any changes are required, the applicant will be requested to revise the application.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 8:
            </strong>
            <br />
            Once processed, the applicant will receive a grant letter with further details on the expected incentive payment.
          </ListGroupItem>
        </ListGroup>
      </div>
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;
